# prism

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  README.zh-CN.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.worker.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
.github/: copilot-instructions.md
docs/: admin.md  api.md  app-notifications.md  app-permissions.md  architecture.md  configuration.md  getting-started.md  index.md  oauth.md  personal-access-tokens.md  public-profile.md  social-login.md  webhooks.md
docs/.vitepress/: config.ts
docs/zh/: admin.md  api.md  app-notifications.md  app-permissions.md  architecture.md  configuration.md  getting-started.md  index.md  oauth.md  personal-access-tokens.md  public-profile.md  social-login.md  webhooks.md
pow/: Cargo.toml
pow/src/: lib.rs
scripts/: build.ps1  build.py  build.sh  check_translations.ps1  check_translations.py  check_translations.sh
src/: App.tsx  index.css  main.tsx  types.ts
src/components/: Captcha.tsx  CopyIdButton.tsx  DurationInput.tsx  ImageUrlInput.tsx  Layout.tsx  Skeletons.tsx  ThemeProvider.tsx
src/i18n/: en.json  index.ts  zh.json
src/lib/: api.ts  duration.ts  markdown.ts  pow.ts
src/pages/: ConnectedApps.tsx  Connections.tsx  Dashboard.tsx  Domains.tsx  Init.tsx  Login.tsx  Notifications.tsx  Profile.tsx  PublicProfile.tsx  PublicTeam.tsx  Register.tsx  Security.tsx  SocialConfirm.tsx  SocialSelect.tsx  TgAuthCallback.tsx  Tokens.tsx  UserWebhooks.tsx  VerifyChoose.tsx  (+1 more)
worker/: index.ts  types.ts
(+122 files in other folders)
